--- a/activities.html
+++ b/activities.html
@@ -19,23 +19,27 @@
             }
             body {
       font-family: 'Arial', sans-serif;
-      background: linear-gradient(120deg, #1f1f1f, #3b3b3b);
-      color: #fff;
+      background: #f9f9f9;
+      color: #333;
       margin: 0;
       padding: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
     }
 
     .carousel-container {
-      width: 90%;
-      max-width: 800px;
-      margin: 40px auto;
+      width: 80%;
+      max-width: 1000px;
+      background: #fff;
       border-radius: 10px;
       overflow: hidden;
-      box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.5);
+      box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
     }
 
     .swiper {
-      background: linear-gradient(120deg, #3b3b3b, #1f1f1f);
+      padding: 20px;
     }
 
     .swiper-slide {
@@ -46,57 +50,42 @@
       padding: 20px;
     }
 
-    .swiper-slide h3 {
+    .text-box {
+      width: 100%;
+      max-width: 600px;
+      margin-top: 20px;
+      padding: 15px;
+      background: #f7f7f7;
+      border-radius: 8px;
+      box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.1);
+    }
+
+    .text-box h3 {
       font-size: 1.5rem;
       margin-bottom: 10px;
-      color: #ffdf00;
-      text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+      color: #444;
     }
 
-    .swiper-slide p {
+    .text-box p {
       font-size: 1rem;
       line-height: 1.6;
-      color: #fff;
-      margin-bottom: 15px;
+      color: #555;
     }
 
-    .swiper-slide a img {
+    .swiper-slide img {
       max-width: 100%;
       height: auto;
-      border: 3px solid #ffdf00;
-      border-radius: 10px;
-      box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.5);
-      transition: transform 0.3s ease;
-    }
-
-    .swiper-slide a img:hover {
-      transform: scale(1.1);
+      border-radius: 8px;
+      margin-bottom: 20px;
     }
 
     .swiper-pagination-bullet {
-      background: #ffdf00;
+      background: #666;
     }
 
-    .button {
-      display: inline-block;
-      padding: 10px 20px;
-      background: #ffdf00;
-      color: #1f1f1f;
-      font-weight: bold;
-      text-transform: uppercase;
-      border: none;
-      border-radius: 5px;
-      box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.5);
-      cursor: pointer;
-      text-decoration: none;
-      transition: background 0.3s ease, transform 0.2s ease;
+    .swiper-pagination-bullet-active {
+      background: #444;
     }
-
-    .button:hover {
-      background: #ffcc00;
-      transform: translateY(-3px);
-    }
-
     </style>
 </head>
 <body>
@@ -237,31 +226,30 @@
         x[slideIndex[no]-1].style.display = "block";  
     }
     </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/9.4.1/swiper-bundle.min.js"></script>
-    <script src="posts.js"></script>
-    <script>
-      const posts = JSON.parse(localStorage.getItem("facebookPosts") || '[]');
-      const carouselContent = document.getElementById("carousel-content");
-  
-      posts.forEach(post => {
-        const slide = document.createElement("div");
-        slide.classList.add("swiper-slide");
-        slide.innerHTML = `
-          <h3>${post.title}</h3>
-          <p>${post.content.replace(/\n/g, '<br>')}</p>
-          <a href="${post.link}" target="_blank">
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/9.4.1/swiper-bundle.min.js"></script>
+      <script src="posts.js"></script>
+      <script>
+        const posts = JSON.parse(localStorage.getItem("facebookPosts") || '[]');
+        const carouselContent = document.getElementById("carousel-content");
+    
+        posts.forEach(post => {
+          const slide = document.createElement("div");
+          slide.classList.add("swiper-slide");
+          slide.innerHTML = `
             <img src="${post.image}" alt="${post.title}">
-          </a>
-          <a href="${post.link}" class="button" target="_blank">Read More</a>
-        `;
-        carouselContent.appendChild(slide);
-      });
-  
-      new Swiper(".swiper", {
-        pagination: { el: ".swiper-pagination" },
-        autoplay: { delay: 5000 },
-        loop: true,
-      });
-    </script>
+            <div class="text-box">
+              <h3>${post.title}</h3>
+              <p>${post.content.replace(/\n/g, '<br>')}</p>
+            </div>
+          `;
+          carouselContent.appendChild(slide);
+        });
+    
+        new Swiper(".swiper", {
+          pagination: { el: ".swiper-pagination", clickable: true },
+          autoplay: { delay: 5000 },
+          loop: true,
+        });
+      </script>
 </body>
 </html>
