--- a/activities.html
+++ b/activities.html
@@ -18,74 +18,72 @@
                 vertical-align: middle;
             }
             body {
-      font-family: 'Arial', sans-serif;
-      background: #f9f9f9;
-      color: #333;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-    }
-
-    .carousel-container {
-      width: 80%;
-      max-width: 1000px;
-      background: #fff;
-      border-radius: 10px;
-      overflow: hidden;
-      box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
-    }
-
-    .swiper {
-      padding: 20px;
-    }
-
-    .swiper-slide {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      text-align: center;
-      padding: 20px;
-    }
-
-    .text-box {
-      width: 100%;
-      max-width: 600px;
-      margin-top: 20px;
-      padding: 15px;
-      background: #f7f7f7;
-      border-radius: 8px;
-      box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.1);
-    }
-
-    .text-box h3 {
-      font-size: 1.5rem;
-      margin-bottom: 10px;
-      color: #444;
-    }
-
-    .text-box p {
-      font-size: 1rem;
-      line-height: 1.6;
-      color: #555;
-    }
-
-    .swiper-slide img {
-      max-width: 100%;
-      height: auto;
-      border-radius: 8px;
-      margin-bottom: 20px;
-    }
-
-    .swiper-pagination-bullet {
-      background: #666;
-    }
-
-    .swiper-pagination-bullet-active {
-      background: #444;
-    }
+            font-family: 'Arial', sans-serif;
+            background: #f9f9f9;
+            color: #333;
+            margin: 0;
+            padding: 0;
+        }
+        header nav {
+            display: flex;
+            align-items: center;
+            padding: 10px 20px;
+            background: #fff;
+        }
+        header nav a {
+            margin-left: 20px;
+            text-decoration: none;
+            color: #333;
+        }
+        .carousel-container {
+            width: 90%; /* Wider container */
+            max-width: 1200px; /* Maintain a sensible limit for large screens */
+            background: #fff;
+            border-radius: 10px;
+            overflow: hidden;
+            margin: 20px auto; /* Center the carousel */
+            box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
+        }
+        .swiper {
+            padding: 10px; /* Adjust padding to prevent height issues */
+        }
+        .swiper-slide {
+            display: flex;
+            flex-direction: row; /* Place content side by side */
+            align-items: center;
+            justify-content: center;
+            text-align: left;
+            padding: 10px;
+        }
+        .swiper-slide img {
+            max-width: 45%; /* Limit image width */
+            height: auto; /* Keep aspect ratio */
+            border-radius: 8px;
+            margin-right: 15px;
+        }
+        .text-box {
+            width: 50%; /* Adjust text box to fit next to the image */
+            padding: 15px;
+            background: #f7f7f7;
+            border-radius: 8px;
+            box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.1);
+        }
+        .text-box h3 {
+            font-size: 1.3rem; /* Smaller title */
+            margin-bottom: 10px;
+            color: #444;
+        }
+        .text-box p {
+            font-size: 0.9rem; /* Smaller content */
+            line-height: 1.4;
+            color: #555;
+        }
+        .swiper-pagination-bullet {
+            background: #666;
+        }
+        .swiper-pagination-bullet-active {
+            background: #444;
+        }
     </style>
 </head>
 <body>
@@ -104,10 +102,10 @@
     <main>
       <div class="carousel-container">
         <div class="swiper">
-          <div class="swiper-wrapper" id="carousel-content"></div>
-          <div class="swiper-pagination"></div>
+            <div class="swiper-wrapper" id="carousel-content"></div>
+            <div class="swiper-pagination"></div>
         </div>
-      </div>
+    </div>
 
         <h1>Application Orientation 24-25</h1>
         <div id="content" class="activities">
@@ -229,27 +227,27 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/9.4.1/swiper-bundle.min.js"></script>
       <script src="posts.js"></script>
       <script>
-        const posts = JSON.parse(localStorage.getItem("facebookPosts") || '[]');
-        const carouselContent = document.getElementById("carousel-content");
-    
-        posts.forEach(post => {
-          const slide = document.createElement("div");
-          slide.classList.add("swiper-slide");
-          slide.innerHTML = `
-            <img src="${post.image}" alt="${post.title}">
-            <div class="text-box">
-              <h3>${post.title}</h3>
-              <p>${post.content.replace(/\n/g, '<br>')}</p>
-            </div>
-          `;
-          carouselContent.appendChild(slide);
-        });
-    
-        new Swiper(".swiper", {
-          pagination: { el: ".swiper-pagination", clickable: true },
-          autoplay: { delay: 5000 },
-          loop: true,
-        });
+          const posts = JSON.parse(localStorage.getItem("facebookPosts") || '[]');
+          const carouselContent = document.getElementById("carousel-content");
+  
+          posts.forEach(post => {
+              const slide = document.createElement("div");
+              slide.classList.add("swiper-slide");
+              slide.innerHTML = `
+                  <img src="${post.image}" alt="${post.title}">
+                  <div class="text-box">
+                    <h3>${post.title}</h3>
+                    <p>${post.content.replace(/\n/g, '<br>')}</p>
+                  </div>
+              `;
+              carouselContent.appendChild(slide);
+          });
+  
+          new Swiper(".swiper", {
+              pagination: { el: ".swiper-pagination", clickable: true },
+              autoplay: { delay: 5000 },
+              loop: true,
+          });
       </script>
 </body>
 </html>
