--- a/activities.html
+++ b/activities.html
@@ -36,6 +36,7 @@
             color: #333;
         }
         .carousel-container {
+            height: 500px;
             width: 90%; /* Wider container */
             max-width: 1200px; /* Maintain a sensible limit for large screens */
             background: #fff;
@@ -46,6 +47,7 @@
         }
         .swiper {
             padding: 10px; /* Adjust padding to prevent height issues */
+            height: 100%;
         }
         .swiper-slide {
             display: flex;
@@ -60,6 +62,8 @@
             height: auto; /* Keep aspect ratio */
             border-radius: 8px;
             margin-right: 15px;
+            height: auto; /* Keep image aspect ratio, or use a specific height */
+            max-height: 100%; /* Prevent images from exceeding container height */
         }
         .text-box {
             width: 50%; /* Adjust text box to fit next to the image */
