--- a/activities.html
+++ b/activities.html
@@ -73,13 +73,15 @@
             box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.1);
         }
         .text-box h3 {
+            font-size: 1.2rem; /* Smaller title size */
+            line-height: 1.4; /* Adjust spacing */
             font-size: 1.3rem; /* Smaller title */
             margin-bottom: 10px;
             color: #444;
         }
         .text-box p {
-            font-size: 0.9rem; /* Smaller content */
-            line-height: 1.4;
+            font-size: 0.9rem; /* Smaller body text */
+            line-height: 1.5; /* Improve readability */
             color: #555;
         }
         .swiper-pagination-bullet {
