--- a/activities.html
+++ b/activities.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="ampli-style.css">
     <link rel="icon" type="image/x-icon" href="images/favicon_io/favicon.ico">
     <title>UP AMPLI</title>
+    <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/9.4.1/swiper-bundle.min.css" />
     <style>
             * {
@@ -17,79 +18,101 @@
             img {
                 vertical-align: middle;
             }
-            body {
-            font-family: 'Arial', sans-serif;
-            background: #f9f9f9;
-            color: #333;
-            margin: 0;
-            padding: 0;
-        }
-        header nav {
-            display: flex;
-            align-items: center;
-            padding: 10px 20px;
-            background: #fff;
-        }
-        header nav a {
-            margin-left: 20px;
-            text-decoration: none;
-            color: #333;
-        }
-        .carousel-container {
-            height: 500px;
-            width: 90%; /* Wider container */
-            max-width: 1200px; /* Maintain a sensible limit for large screens */
-            background: #fff;
-            border-radius: 10px;
-            overflow: hidden;
-            margin: 20px auto; /* Center the carousel */
-            box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
-        }
-        .swiper {
-            padding: 10px; /* Adjust padding to prevent height issues */
-            height: 100%;
-        }
-        .swiper-slide {
-            display: flex;
-            flex-direction: row; /* Place content side by side */
-            align-items: center;
-            justify-content: center;
-            text-align: left;
-            padding: 10px;
-        }
-        .swiper-slide img {
-            max-width: 45%; /* Limit image width */
-            height: auto; /* Keep aspect ratio */
-            border-radius: 8px;
-            margin-right: 15px;
-            height: auto; /* Keep image aspect ratio, or use a specific height */
-            max-height: 100%; /* Prevent images from exceeding container height */
-        }
-        .text-box {
-            width: 50%; /* Adjust text box to fit next to the image */
-            padding: 15px;
-            background: #f7f7f7;
-            border-radius: 8px;
-            box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.1);
-        }
-        .text-box h3 {
-            font-size: 1.2rem; /* Smaller title size */
-            line-height: 1.4; /* Adjust spacing */
-            font-size: 1.3rem; /* Smaller title */
-            margin-bottom: 10px;
-            color: #444;
-        }
-        .text-box p {
-            font-size: 0.9rem; /* Smaller body text */
-            line-height: 1.5; /* Improve readability */
-            color: #555;
-        }
-        .swiper-pagination-bullet {
-            background: #666;
-        }
-        .swiper-pagination-bullet-active {
-            background: #444;
-        }
+    body {
+  font-family: 'Arial', sans-serif;
+  background: #f9f9f9;
+  color: #333;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+}
+
+/* Carousel Container */
+.carousel-container {
+  width: 90%; /* Wider carousel */
+  max-width: 1200px; /* Maximum width */
+  background: #fff;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
+  margin: 20px auto;
+}
+
+/* Swiper Settings */
+.swiper {
+  padding: 20px 0; /* Adjust top and bottom padding for cleaner look */
+}
+
+.swiper-slide {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  padding: 20px;
+}
+
+.swiper-slide img {
+  width: 100%; /* Ensure it scales properly */
+  height: auto; /* Keep aspect ratio */
+  max-height: 400px; /* Limit the height */
+  object-fit: cover; /* Crop if needed */
+  border-radius: 8px;
+  margin-bottom: 20px;
+}
+
+/* Text Box Styling */
+.text-box {
+  width: 100%;
+  max-width: 600px;
+  margin-top: 20px;
+  padding: 15px;
+  background: #f7f7f7;
+  border-radius: 8px;
+  box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.1);
+}
+
+.text-box h3 {
+  font-family: 'Courgette', cursive; /* Stylish music font */
+  font-size: 1.3rem; /* Gmail-style title size */
+  line-height: 1.4;
+  color: #333;
+  margin-bottom: 10px;
+}
+
+.text-box p {
+  font-family: 'Poppins', sans-serif; /* Clean font for readability */
+  font-size: 0.95rem; /* Gmail-like body text size */
+  line-height: 1.6;
+  color: #555;
+}
+
+/* Pagination Style */
+.swiper-pagination-bullet {
+  background: #666; /* Neutral gray bullets */
+}
+
+.swiper-pagination-bullet-active {
+  background: #333; /* Darker gray for active bullet */
+}
+
+/* Responsive Adjustments */
+@media screen and (max-width: 768px) {
+  .carousel-container {
+    width: 95%; /* More compact for smaller screens */
+  }
+
+  .text-box h3 {
+    font-size: 1.2rem; /* Slightly smaller title on small screens */
+  }
+
+  .text-box p {
+    font-size: 0.85rem; /* Smaller text for better fit */
+  }
+}
+
     </style>
 </head>
 <body>
@@ -234,26 +257,27 @@
       <script src="posts.js"></script>
       <script>
           const posts = JSON.parse(localStorage.getItem("facebookPosts") || '[]');
-          const carouselContent = document.getElementById("carousel-content");
-  
-          posts.forEach(post => {
-              const slide = document.createElement("div");
-              slide.classList.add("swiper-slide");
-              slide.innerHTML = `
-                  <img src="${post.image}" alt="${post.title}">
-                  <div class="text-box">
-                    <h3>${post.title}</h3>
-                    <p>${post.content.replace(/\n/g, '<br>')}</p>
-                  </div>
-              `;
-              carouselContent.appendChild(slide);
-          });
-  
-          new Swiper(".swiper", {
-              pagination: { el: ".swiper-pagination", clickable: true },
-              autoplay: { delay: 5000 },
-              loop: true,
-          });
+const carouselContent = document.getElementById("carousel-content");
+
+posts.forEach(post => {
+  const slide = document.createElement("div");
+  slide.classList.add("swiper-slide");
+  slide.innerHTML = `
+    <img src="${post.image}" alt="${post.title}">
+    <div class="text-box">
+      <h3>${post.title}</h3>
+      <p>${post.content.replace(/\n/g, '<br>')}</p>
+    </div>
+  `;
+  carouselContent.appendChild(slide);
+});
+
+new Swiper(".swiper", {
+  pagination: { el: ".swiper-pagination", clickable: true },
+  autoplay: { delay: 5000 }, /* Carousel auto-slide every 5 seconds */
+  loop: true, /* Infinite loop */
+});
+
       </script>
 </body>
 </html>
