--- a/activities.html
+++ b/activities.html
@@ -10,9 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/9.4.1/swiper-bundle.min.css" />
     <style>
             * {
-                box-sizing: border-box;
-                margin: 0;
-                padding: 0;
+                box-sizing: border-box
             }
             .mySlides1, .mySlides2 {
                 display: none
