--- a/activities.html
+++ b/activities.html
@@ -18,7 +18,7 @@
             img {
                 vertical-align: middle;
             }
-    body {
+            body {
   font-family: 'Arial', sans-serif;
   background: #f9f9f9;
   color: #333;
@@ -76,7 +76,7 @@
 
 .text-box h3 {
   font-family: 'Courgette', cursive; /* Stylish music font */
-  font-size: 1.3rem; /* Gmail-style title size */
+  font-size: 1.1rem; /* Smaller title font size */
   line-height: 1.4;
   color: #333;
   margin-bottom: 10px;
@@ -84,7 +84,7 @@
 
 .text-box p {
   font-family: 'Poppins', sans-serif; /* Clean font for readability */
-  font-size: 0.95rem; /* Gmail-like body text size */
+  font-size: 0.8rem; /* Smaller body text size */
   line-height: 1.6;
   color: #555;
 }
@@ -105,11 +105,11 @@
   }
 
   .text-box h3 {
-    font-size: 1.2rem; /* Slightly smaller title on small screens */
+    font-size: 1rem; /* Even smaller title on small screens */
   }
 
   .text-box p {
-    font-size: 0.85rem; /* Smaller text for better fit */
+    font-size: 0.75rem; /* Smaller text for better fit */
   }
 }
 
