--- a/activities.html
+++ b/activities.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/9.4.1/swiper-bundle.min.css" />
     <style>
             * {
-                box-sizing: border-box
+                box-sizing: border-box;
+                margin: 0;
+                padding: 0;
             }
             .mySlides1, .mySlides2 {
                 display: none
@@ -76,7 +78,7 @@
 
 .text-box h3 {
   font-family: 'Courgette', cursive; /* Stylish music font */
-  font-size: 1.1rem; /* Smaller title font size */
+  font-size: 0.9rem; /* Smaller title font size */
   line-height: 1.4;
   color: #333;
   margin-bottom: 10px;
@@ -84,7 +86,7 @@
 
 .text-box p {
   font-family: 'Poppins', sans-serif; /* Clean font for readability */
-  font-size: 0.8rem; /* Smaller body text size */
+  font-size: 0.75rem; /* Smaller body text size */
   line-height: 1.6;
   color: #555;
 }
@@ -105,11 +107,11 @@
   }
 
   .text-box h3 {
-    font-size: 1rem; /* Even smaller title on small screens */
+    font-size: 0.85rem; /* Even smaller title on small screens */
   }
 
   .text-box p {
-    font-size: 0.75rem; /* Smaller text for better fit */
+    font-size: 0.7rem; /* Smaller text for better fit */
   }
 }
 
