--- a/activities.html
+++ b/activities.html
@@ -10,108 +10,108 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/9.4.1/swiper-bundle.min.css" />
     <style>
             * {
-                box-sizing: border-box;
-            }
-            .mySlides1, .mySlides2 {
-                display: none
-            }
-            img {
-                vertical-align: middle;
-            }
-            body {
-  font-family: 'Arial', sans-serif;
-  background: #f9f9f9;
-  color: #333;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-}
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+    }
 
-/* Carousel Container */
-.carousel-container {
-  width: 90%; /* Wider carousel */
-  max-width: 1200px; /* Maximum width */
-  background: #fff;
-  border-radius: 10px;
-  overflow: hidden;
-  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
-  margin: 20px auto;
-}
+    body {
+        font-family: 'Poppins', sans-serif;
+        background: #f9f9f9;
+        color: #333;
+        display: flex;
+        flex-direction: column;
+        min-height: 100vh;
+    }
 
-/* Swiper Settings */
-.swiper {
-  padding: 20px 0; /* Adjust top and bottom padding for cleaner look */
-}
+    header {
+        background: #f7f7f7;
+        padding: 10px 20px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        border-bottom: 1px solid #ddd;
+    }
 
-.swiper-slide {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  padding: 20px;
-}
+    header .logo {
+        height: 50px;
+        max-width: 100%;
+    }
 
-.swiper-slide img {
-  width: 100%; /* Ensure it scales properly */
-  height: auto; /* Keep aspect ratio */
-  max-height: 400px; /* Limit the height */
-  object-fit: cover; /* Crop if needed */
-  border-radius: 8px;
-  margin-bottom: 20px;
-}
+    nav a {
+        margin: 0 10px;
+        text-decoration: none;
+        color: #333;
+        font-weight: 600;
+        transition: color 0.3s;
+    }
 
-/* Text Box Styling */
-.text-box {
-  width: 100%;
-  max-width: 600px;
-  margin-top: 20px;
-  padding: 15px;
-  background: #f7f7f7;
-  border-radius: 8px;
-  box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.1);
-}
+    nav a:hover {
+        color: #007BFF;
+    }
 
-.text-box h3 {
-  font-family: 'Courgette', cursive; /* Stylish music font */
-  font-size: 0.9rem; /* Smaller title font size */
-  line-height: 1.4;
-  color: #333;
-  margin-bottom: 10px;
-}
+    #cover {
+        width: 100%;
+        display: block;
+    }
 
-.text-box p {
-  font-family: 'Poppins', sans-serif; /* Clean font for readability */
-  font-size: 0.75rem; /* Smaller body text size */
-  line-height: 1.6;
-  color: #555;
-}
+    main {
+        flex: 1;
+        padding: 20px;
+    }
 
-/* Pagination Style */
-.swiper-pagination-bullet {
-  background: #666; /* Neutral gray bullets */
-}
+    h1 {
+        font-family: 'Courgette', cursive;
+        font-size: 1.8rem;
+        margin: 20px 0;
+    }
 
-.swiper-pagination-bullet-active {
-  background: #333; /* Darker gray for active bullet */
-}
+    .carousel-container {
+        width: 100%;
+        max-width: 1200px;
+        margin: 0 auto 40px;
+        background: #fff;
+        border-radius: 10px;
+        box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
+        overflow: hidden;
+    }
 
-/* Responsive Adjustments */
-@media screen and (max-width: 768px) {
-  .carousel-container {
-    width: 95%; /* More compact for smaller screens */
-  }
+    .swiper-slide img {
+        width: 100%;
+        max-height: 400px;
+        object-fit: cover;
+    }
 
-  .text-box h3 {
-    font-size: 0.85rem; /* Even smaller title on small screens */
-  }
+    .text-box {
+        padding: 15px;
+        background: #f7f7f7;
+        border-radius: 8px;
+        box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.1);
+    }
 
-  .text-box p {
-    font-size: 0.7rem; /* Smaller text for better fit */
-  }
-}
+    .mySlides1, .mySlides2 {
+        display: none;
+    }
+
+    img {
+        vertical-align: middle;
+    }
+
+    footer {
+        background: #333;
+        color: #fff;
+        padding: 20px 10px;
+        text-align: center;
+    }
+
+    footer a {
+        color: #007BFF;
+        text-decoration: none;
+    }
+
+    footer a:hover {
+        text-decoration: underline;
+    }
 
     </style>
 </head>
