--- a/activities.html
+++ b/activities.html
@@ -22,92 +22,93 @@
     }
 
     .carousel-container {
-  width: 100%; /* Full width for the embed look */
-  max-width: 1200px; /* Wider than before */
-  aspect-ratio: 16/9; /* To mimic a theater mode aspect ratio */
-  background: #ffffff; /* White background like a music sheet */
-  border-radius: 8px; /* Slightly rounded corners */
-  overflow: hidden;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* Softer shadow for elevation */
-  margin: 20px auto; /* Centering with auto margins */
-  border: 2px solid #ececec; /* Light border for a clean, subtle frame */
-  position: relative; /* Ensure proper positioning for inner elements */
+    width: 100%; /* Full width for the embed look */
+    max-width: 1200px; /* Wider than before */
+    aspect-ratio: 16/9; /* Theater mode ratio */
+    background: #ffffff; /* White background like a music sheet */
+    border-radius: 8px; /* Slightly rounded corners */
+    overflow: hidden;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* Softer shadow for elevation */
+    margin: 20px auto; /* Centering with auto margins */
+    border: 2px solid #ececec; /* Light border for a clean, subtle frame */
+    position: relative; /* Ensure proper positioning for inner elements */
 }
 
 .swiper {
-  height: 100%; /* Occupy the full height of the container */
-  display: flex; /* Ensure slides are aligned correctly */
-  flex-direction: column;
-  justify-content: center;
-  padding: 0; /* Remove unnecessary padding */
+    height: 100%; /* Occupy the full height of the container */
+    display: flex; /* Ensure slides are aligned correctly */
+    flex-direction: column;
+    justify-content: center;
+    padding: 0; /* Remove unnecessary padding */
 }
 
 .swiper-slide {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between; /* Ensure spacing between image and text */
+    text-align: center;
+    height: 100%;
 }
 
 .swiper-slide img {
-  width: 100%; /* Image fits the container width */
-  max-height: 60%; /* Limit the height to leave space for the text */
-  object-fit: cover; /* Crop the image to fit neatly */
-  margin-bottom: 10px; /* Add space between image and text */
+    width: 95%; /* Fit neatly within the container, with padding */
+    max-height: 55%; /* Limit image height to maintain text visibility */
+    object-fit: contain; /* Scale the image to fit without cropping */
+    margin: 10px auto; /* Center image horizontally */
+    border-radius: 6px; /* Slightly round the image edges */
 }
 
 .text-box {
-  width: 90%; /* Slight padding within the carousel */
-  background: #f9f9f9; /* Soft grayish-white for a "sheet" effect */
-  border-radius: 4px; /* Subtle rounded corners */
-  padding: 10px;
-  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1); /* Minimal shadow */
-  overflow: hidden; /* Prevent overflow of long text */
-  max-height: 35%; /* Keep the text section within a fixed height */
-  display: flex;
-  flex-direction: column;
-  justify-content: center; /* Center the text inside */
-  text-align: center; /* Center the text horizontally */
+    width: 90%; /* Slight padding within the carousel */
+    background: #f9f9f9; /* Soft grayish-white for a "sheet" effect */
+    border-radius: 4px; /* Subtle rounded corners */
+    padding: 6px; /* Slightly reduced padding for more compact text-box */
+    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1); /* Minimal shadow */
+    overflow-y: auto; /* Allow scrolling if text exceeds the box */
+    max-height: 40%; /* Keep the text section within a fixed height */
+    margin-top: 5px; /* Space between image and text-box */
 }
 
 .text-box h3 {
-  font-family: 'Courgette', cursive;
-  font-size: 0.6rem; /* Increase readability */
-  line-height: 0.7;
-  color: #444;
-  margin-bottom: 5px; /* Space below the title */
+    font-family: 'Courgette', cursive;
+    font-size: 0.8rem; /* Smaller font for readability */
+    line-height: 1.3;
+    color: #444;
+    margin-bottom: 4px; /* Reduce space below the title */
 }
 
 .text-box p {
-  font-family: 'Poppins', sans-serif;
-  font-size: 0.8rem; /* Slightly larger for readability */
-  line-height: 1.6;
-  color: #666;
-  margin: 0;
+    font-family: 'Poppins', sans-serif;
+    font-size: 0.6rem; /* Smaller font for longer text */
+    line-height: 1.2; /* Compact line spacing */
+    color: #666;
+    margin: 0;
 }
 
+/* Swiper Pagination */
 .swiper-pagination-bullet {
-  background: #bbb; /* Softer pagination dots */
+    background: #bbb; /* Softer pagination dots */
 }
 
 .swiper-pagination-bullet-active {
-  background: #444; /* Darker for active */
+    background: #444; /* Darker for active */
 }
 
 /* Responsive Adjustments */
 @media screen and (max-width: 768px) {
-  .carousel-container {
-    width: 95%; /* More compact for smaller screens */
-  }
+    .carousel-container {
+        width: 95%; /* Compact for smaller screens */
+        aspect-ratio: 4/3; /* Adjust ratio for smaller devices */
+    }
 
-  .text-box h3 {
-    font-size: 0.85rem; /* Even smaller title on small screens */
-  }
+    .text-box h3 {
+        font-size: 0.7rem; /* Even smaller title font */
+    }
 
-  .text-box p {
-    font-size: 0.7rem; /* Smaller text for better fit */
-  }
+    .text-box p {
+        font-size: 0.55rem; /* Smaller text for better fit */
+    }
 }
 
     .mySlides1, .mySlides2 {
